[sdist]
formats=gztar

[metadata]
name         = yml2
version      = 2.7.0
author	     = Volker Birk
author_email = vb@pep-project.org
url	     = https://gitea.pep.foundation/fdik/yml2
project_urls =
    Documentation = http://fdik.org/yml/
license	     = GPL v2
license_file = gpl-2.0.txt

[options]
packages = yml2
scripts =
    yml2c
    yml2proc
include_package_data = True
zip_safe = False
install_requires = lxml
