[sdist]
formats=gztar

[metadata]
name         = yml2
version      = 2.7.3
author	     = Volker Birk
author_email = vb@pep-project.org
url	     = https://pep.foundation/dev/repos/yml2/
license	     = GPL v2
license_file = gpl-2.0.txt

[options]
packages = yml2
scripts =
    yml2c
    yml2proc
include_package_data = True
zip_safe = False
install_requires = lxml
